# DistributedMessageBus

./: .gitignore  LICENSE  README.md
MessageExample/: CMakeLists.txt
MessageExample/include/MsgMiddleware/: Message.h  MsgExport.h  MsgMiddleware.h  NetworkServiceManager.h
MessageExample/libs/: MsgMiddleware.lib
MessageExample/src/: RemoteNode.cpp  ThreadInProcess.cpp
MessageServer/: CMakeLists.txt  main.cpp
MessageServer/include/: Message.h  MessageSerialize.h  MsgMiddlewareInit.h
MessageServer/src/: MessageBroker.cpp  MsgMiddleware.cpp  NetworkServiceManager.cpp
